test/fixture/invalid/lib.scrypt
contract Lib {
  int x;

  function mirror2(int y): int {
    return this.x*y;
  }
}